k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calc-ingress-router
  namespace: calculation-prod
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-TLS13-1-2-2021-06"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443" # Forces HTTP traffic to HTTPS
    # IMPORTANT: Don't forget to replace the ARN below with your actual AWS ACM Certificate ARN later!
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:123456789012:certificate/your-ssl-id"
  labels:
    owner: m-durga-prasad
spec:
  rules:
  - host: prassadhmulticloud.online
    http:
      paths:
      # Routes backend API traffic
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: calc-backend-svc
            port:
              number: 8080
      # Routes all other traffic to the React frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calc-frontend-svc
            port:
              number: 80
